2007-Dec-09  Heikki Junnila <hjunnila@users.sf.net>
	* Revised the (output)plugin interface a bit by removing saveSettings,
	  loadSettings, isOpen, setConfigDir and contextMenu methods.
	* Modified USBDMX and DMX4Linux plugins to use the revised plugin
	  interface and changed their configuration dialogs to actually not
	  configure anything, but test output.
	* TODO: LLA plugin does not work/compile now...

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Changed Monitor's channel label color to QColorGroup::midlight().

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Unified most QMessageBoxes to use questions when appropriate and
	  the essence of the question as the title instead of plain "QLC".
	* Removed VCDockSliderProperties as obsolete.
	* Adjusted some dialog sizes
	* Adjusted some dialog buttons' etc. sizes.

2007-Dec-05  Heikki Junnila <hjunnila@users.sf.net>
	* Modified EFXEditor, FCEditor & ChaserEditor constructors to
	  comply with QT conventions (parent first).
	* Modified the UIs for the editors to have slightly more size-adaptive
	  buttons.

2007-Dec-04  Heikki Junnila <hjunnila@users.sf.net>
	* Changed ConsoleChannel's buttons' maximum sizes back to 32767.
	* Changed "Preset" to "Capability" in ConsoleChannel.

2007-Dec-04  Heikki Junnila <hjunnila@users.sf.net>
	* Modified ASE so that it is possible to edit multiple channels
	  at a time with RMB. EditSceneValue dialog doesn't work yet though...

2007-Dec-03  Heikki Junnila <hjunnila@users.sf.net>
	* Changed the type of generic fixture to "Dimmer" and set its default
	  name to "Dimmers" in class AddFixture.

2007-Dec-03  Heikki Junnila <hjunnila@users.sf.net>
	* Added one common QLCChannel & QLCCapability to generic fixtures so
	  that every component depending on them wouldn't crash.
	* Started some work on making USBDMX plugin to support multiple
	  universes (mainly just indenting :)
	* Updated some documentation to speak about fixture instead of device.
